<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/default_margin">

    <br.com.usp.willianerodrigues.course.util.Bauhs93
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="?attr/colorPrimary"
        android:textSize="@dimen/fontsize_display_3" />

    <br.com.usp.willianerodrigues.course.util.RobotoRegular
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/slide_01_title"
        android:textColor="@color/md_purple_500"
        android:textSize="@dimen/fontsize_title" />

    <br.com.usp.willianerodrigues.course.util.RobotoRegular
        android:id="@+id/subtitle_slide1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/slide_01_subtitle"
        android:textColor="@color/md_purple_200"
        android:textSize="@dimen/fontsize_title" />

</LinearLayout>