<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_margin">

    <br.com.usp.willianerodrigues.course.util.Bauhs93
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="?attr/colorPrimary"
        android:textSize="@dimen/fontsize_display_3"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_button_height"
        android:background="@drawable/raised_button_purple"
        android:padding="8dp"
        android:text="@string/button_start_slide_04"
        android:textAllCaps="true"
        android:textColorHighlight="@color/md_text_white"
        android:textColor="@color/md_white_1000"
        android:layout_above="@+id/btn_sing_in"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btn_sing_in"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_button_height"
        android:background="@drawable/border_button_purple"
        android:padding="8dp"
        android:text="@string/button_sing_in_slide_04"
        android:textAllCaps="true"
        android:textColor="@color/md_purple_700"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>