<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/md_purple_500"
    android:gravity="center"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:src="@drawable/trophy"
        android:contentDescription="@string/level_description" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/default_margin">

        <br.com.usp.willianerodrigues.course.util.RobotoRegular
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/md_white_1000"
            android:textSize="@dimen/fontsize_headline"
            android:text="@string/drawer_point" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <br.com.usp.willianerodrigues.course.util.RobotoBold
                android:id="@+id/pontuacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/md_white_1000"
                android:textSize="@dimen/fontsize_display_1"
                android:text="000" />

            <br.com.usp.willianerodrigues.course.util.RobotoRegular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:textColor="@color/md_white_1000"
                android:textSize="@dimen/fontsize_title"
                android:text="@string/drawer_point_litle" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
