<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="br.com.usp.willianerodrigues.course.activities.RegisterActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_settings"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_margin"
        android:scrollbars="none|vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <br.com.usp.willianerodrigues.course.util.RobotoBold
                android:id="@+id/text_new_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="start"
                android:text="@string/change_name_user"
                android:textColor="@color/md_text"
                android:textSize="@dimen/fontsize_subhead" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/SettingsTextInputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/med_margin">

                <EditText
                    android:id="@+id/settingsTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Nome de usuário anterior"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="@dimen/fontsize_subhead" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/SettingsTextInputNewName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin">

                <EditText
                    android:id="@+id/SettingsTextNewName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Novo usuário"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="@dimen/fontsize_subhead" />

            </android.support.design.widget.TextInputLayout>

            <br.com.usp.willianerodrigues.course.util.RobotoBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="start"
                android:layout_marginTop="32dp"
                android:text="@string/change_password_user"
                android:textColor="@color/md_text"
                android:textSize="@dimen/fontsize_subhead" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputSenhaLast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin">

                <EditText
                    android:id="@+id/senha_last_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Senha Atual"
                    android:imeActionId="@+id/register"
                    android:imeActionLabel="@string/action_register_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textEmailAddress"
                    android:maxEms="16"
                    android:maxLines="1"
                    android:minEms="4"
                    android:singleLine="true"
                    android:textSize="@dimen/fontsize_subhead" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputSenhaNew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin">

                <EditText
                    android:id="@+id/senha_new_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Nova Senha"
                    android:imeActionId="@+id/register"
                    android:imeActionLabel="@string/action_register_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textEmailAddress"
                    android:maxEms="16"
                    android:maxLines="1"
                    android:minEms="4"
                    android:singleLine="true"
                    android:textSize="@dimen/fontsize_subhead" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputSenhaConfirmed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin">

                <EditText
                    android:id="@+id/senha_last_confirmed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Confirmar senha"
                    android:imeActionId="@+id/register"
                    android:imeActionLabel="@string/action_register_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textEmailAddress"
                    android:maxEms="16"
                    android:maxLines="1"
                    android:minEms="4"
                    android:singleLine="true"
                    android:textSize="@dimen/fontsize_subhead" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/med_margin"
                android:orientation="vertical">

                <Button
                    android:id="@+id/email_register_button"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_button_height"
                    android:layout_gravity="center"
                    android:background="@drawable/border_button_purple"
                    android:padding="@dimen/min_margin"
                    android:text="@string/text_button_register"
                    android:textAllCaps="true"
                    android:textColor="@color/md_purple_500" />

            </LinearLayout>

        </LinearLayout>


    </ScrollView>

</LinearLayout>
